--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Form-Task-2</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
   <body>
@@ -12,30 +19,43 @@
         <h2 style="text-align: start">Contact</h2>
       </div>
       <form>
-        <div>
+        <div class="inputDiv">
           <label for="name">Name: </label>
-          <input type="text" name="name" id="name" />
+          <div class="inner-div">
+            <input type="text" name="name" id="name" />
+            <i class="fa-solid fa-user"></i>
+          </div>
         </div>
 
-        <div>
+        <div class="inputDiv">
           <label for="email">Email: </label>
-          <input type="email" name="email" id="email" />
+          <div class="inner-div">
+            <input type="email" name="email" id="email" />
+            <i class="fa-solid fa-envelope"></i>
+          </div>
         </div>
 
-        <div>
+        <div class="inputDiv">
           <label for="country">Country: </label>
-          <input type="text" name="country" id="country" />
+          <div class="inner-div">
+            <input type="text" name="country" id="country" />
+            <i class="fa-solid fa-location-dot"></i>
+          </div>
         </div>
 
-        <div>
+        <div class="inputDiv budgetDiv">
           <label for="budget">Budget: </label>
-          <input type="text" name="budget" id="budget" />
-          <select name="currency" id="currency">
-            <option value="euro">&euro; EUR</option>
-            <option value="usd">&dollar; USD</option>
-          </select>
+          <div class="inner-div">
+            <input type="text" name="budget" id="budget" />
+            <i class="fa-solid fa-piggy-bank"></i>
+            <select name="currency" id="currency">
+              <option value="euro">&euro; EUR</option>
+              <option value="usd">&dollar; USD</option>
+            </select>
+          </div>
         </div>
 
+        <!-- 
         <div>
           <label for="services">Services: </label>
           <input type="checkbox" name="webdesign" id="webdesign" />
@@ -46,7 +66,7 @@
           <input type="checkbox" name="coding" id="coding" />
           Coding (Javascript, PHP coding)
         </div>
-      </form>
+      --></form>
     </section>
   </body>
 </html>
