--- a/index.html
+++ b/index.html
@@ -55,18 +55,26 @@
           </div>
         </div>
 
-        <!-- 
-        <div>
+        <div class="checkboxDiv">
           <label for="services">Services: </label>
-          <input type="checkbox" name="webdesign" id="webdesign" />
-          Webdesign (PSD Layouts)
-          <input type="checkbox" name="sitebuilding" id="sitebuilding" />
-          Sitebuilding (Slicing, HTML + CSS laout)
+          <div class="chebox-input-container">
+            <div class="checkbox-item">
+              <input type="checkbox" name="webdesign" id="webdesign" />
+              <p>Webdesign (PSD Layouts)</p>
+            </div>
 
-          <input type="checkbox" name="coding" id="coding" />
-          Coding (Javascript, PHP coding)
+            <div class="checkbox-item">
+              <input type="checkbox" name="sitebuilding" id="sitebuilding" />
+              <p>Sitebuilding (Slicing, HTML + CSS laout)</p>
+            </div>
+
+            <div class="checkbox-item">
+              <input type="checkbox" name="coding" id="coding" />
+              <p>Coding (Javascript, PHP coding)</p>
+            </div>
+          </div>
         </div>
-      --></form>
+      </form>
     </section>
   </body>
 </html>
