--- a/index.html
+++ b/index.html
@@ -38,7 +38,11 @@
         <div class="inputDiv">
           <label for="country">Country: </label>
           <div class="inner-div">
-            <input type="text" name="country" id="country" />
+            <select name="" id="" class="country">
+              <option value=""></option>
+              <option value="bangladesh">Bangladesh</option>
+              <option value="china">China</option>
+            </select>
             <i class="fa-solid fa-location-dot"></i>
           </div>
         </div>
